HOME | Fixed jump in anim start

--- a/sass/home.sass
+++ b/sass/home.sass
@@ -71,7 +71,7 @@
               //top: 25%
               background: $pr
               z-index: 1
-              opacity: .9
+              //opacity: .9
               //background: darkgreen
               //outline: 1px solid salmon
             .flip-outer
@@ -79,12 +79,13 @@
               @extend %fhw
               z-index: 1
               perspective: 1000px
-              &:hover .flip-inner
-                transform: scale(.75) rotateX(180deg)
+              //visibility: hidden
+              //&:hover .flip-inner
+              //  transform: scale(.75) rotateX(180deg)
               .flip-inner
                 @extend %fhw
                 position: relative
-                transition: transform .5s
+                //transition: transform .5s
                 transform-style: preserve-3d
                 .flip-front, .flip-back
                   @include pa(0, 0)
